use msbuild 15 as default build engine
download nuget4.1 instead of manual copy, need to test

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ msbuild.log
 _app/
 *.ncrunchsolution
 nuget.exe
+nuget3_5.exe
 Kudu.Services.Web/commit.txt
 Setup/WebPiCmdSetup.log
 Kudu.Services.Web/node_modules/
